--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "wattbox",
   "name": "Wattbox",
+  "version": "0.1",
   "documentation": "https://www.home-assistant.io/components/wattbox",
   "requirements": [
     "pysnapavwattbox==0.0.5"
